image-item-listing div has fixed height and scrolling overflow #47

--- a/diamm/static/stylesheets/_source.scss
+++ b/diamm/static/stylesheets/_source.scss
@@ -131,6 +131,8 @@
 }
 
 #image-item-listing {
+  max-height: 770px;
+  overflow: scroll;
   p {
     margin-bottom: 0;
   }
