--- a/diamm/static/stylesheets/styles.css
+++ b/diamm/static/stylesheets/styles.css
@@ -2996,15 +2996,16 @@ footer {
 .diva-tools form {
   margin-bottom: 0; }
 
-#image-item-listing p {
-  margin-bottom: 0; }
-
-#image-item-listing ul {
-  margin-left: 1em;
-  list-style-type: none; }
-
-#image-item-listing li {
-  margin: 0 0; }
+#image-item-listing {
+  max-height: 770px;
+  overflow: scroll; }
+  #image-item-listing p {
+    margin-bottom: 0; }
+  #image-item-listing ul {
+    margin-left: 1em;
+    list-style-type: none; }
+  #image-item-listing li {
+    margin: 0 0; }
 
 .search-box {
   background: #dddede; }
